--- a/dcgan+anogan.ipynb
+++ b/dcgan+anogan.ipynb
@@ -31,9 +31,12 @@
     "---\n",
     "# STEP 1. DCGAN Training\n",
     "---\n",
+    "\n",
+    "Anomaly Detection에서 사용할 이미지 생성모델이 필요합니다. 본 예제에서는 DCGAN을 이용하겠습니다.\n",
+    "\n",
     "## 1. import libraries and data\n",
     "\n",
-    "먼저 필요한 라이브러리들을 로드합니다."
+    "필요한 라이브러리들을 로드합니다."
    ]
   },
   {
@@ -131,7 +134,6 @@
     "---\n",
     "## 2. DCGAN 네트워크 정의\n",
     "\n",
-    "Anomaly Detection에서 사용할 이미지 생성모델이 필요합니다. 다음 코드를 통해 DC GAN을 정의합니다.\n",
     "\n",
     "#### 2-1. Generator 생성함수\n",
     "`input_dim` 파라미터를 통해 임의의 사이즈(본 예제에서는 100 사용)와 채널(본 예제는 grayscale이므로 1사용)를 가지는 latent_dim 벡터를 입력받아  UpSampling과 Convolutional Network을 이용하여 28x28 image를 Generate하는 신경망입니다."
@@ -645,7 +647,9 @@
     "---\n",
     "## 3. DCGAN SageMaker Training\n",
     "\n",
-    "GAN 네트워크의 디버깅이 완료되었으므로 이제 클라우드의 GPU 자원을 이용하여 학습을 실행하겠습니다. GPU 인스턴스 사용을 위해 aws에서 제공하는 머신러닝 서비스(플랫폼)인 SageMaker API를 이용합니다. SageMaker를 이용하면 학습하는 동안에만 GPU 인스턴스를 할당받고 학습완료 후 자원을 바로 반납하도록 구성할 수 있습니다. 해당 작업을 위해 앞서 테스트한 코드를 일부 변경하겠습니다. 이후 변경된 코드를 통해 반복하여 학습을 실행하며 해당 실험을 진행하는 동안 SageMaker로부터 자원을 임대하는 구조를 계속해서 가져갈 수 있습니다.\n"
+    "GAN 네트워크의 디버깅이 완료되었으므로 이제 클라우드의 GPU 자원을 이용하여 학습을 실행하겠습니다. 본 예제의 경우 CPU 환경 정도의 수준에서도 학습이 충분히 가능합니다. 하지만 이미지의 해상도가 높아지거나 BigGAN이나 StyleGAN과 같은 복잡한 GAN모델을 사용할 경우에는 GPU 환경이 필요할 것입니다. \n",
+    "\n",
+    "GPU 인스턴스 사용을 위해 aws에서 제공하는 머신러닝 서비스(플랫폼)인 SageMaker API를 이용합니다. SageMaker를 이용하면 학습하는 동안에만 GPU 인스턴스를 할당받고 학습완료 후 자원을 바로 반납하도록 구성할 수 있습니다. 해당 작업을 위해 앞서 테스트한 코드를 일부 변경하겠습니다. 수정한 코드는 이후 HPO 등 클라우드에서 반복하여 학습을 진행할 때 사용할 수 있할 수 있습니다. (HPO와 관련된 내용은 본 예제에서는 다루지 않습니다. https://github.com/mullue/sm-tf2/blob/master/tf-2-workflow.ipynb 등 다른 예제를 통해 확인할 수 있습니다.)\n"
    ]
   },
   {
@@ -947,6 +951,13 @@
     "        for item in g_losses:\n",
     "            f.write(\"%s\\n\" % item)\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "컨테이너에 추가로 필요한 라이브러리를 별도 파일로 정의하였습니다."
    ]
   },
   {
