--- a/dcgan+anogan.ipynb
+++ b/dcgan+anogan.ipynb
@@ -912,7 +912,7 @@
     "    \n",
     "    \n",
     "# 노트북에서 사용한 training 함수와 동일합니다.\n",
-    "def train_dcgan(epochs=5, bach_size=32, latent_dim=100, lr=0.0002, beta_1=0.5, \n",
+    "def train_dcgan(epochs=5, batch_size=32, latent_dim=100, lr=0.0002, beta_1=0.5, \n",
     "                log_interval=100, save_interval=100, gen_image_path='gen_images', model_path='model') :\n",
     "    \n",
     "    X_train = feed_imgs()\n",
